# aide.ai

./: .env.example  .gitignore  README.md  aide  pyproject.toml  requirements.txt  run-demo.sh  setup.py
.github/workflows/: ci.yml
src/: aide_cli_entry.py
src/ai_agent/: __init__.py  config.py  main.py
src/ai_agent/api/: routes.py  schemas.py
src/ai_agent/diagnostics/: collector.py
src/ai_agent/executor/: executor.py
src/ai_agent/llm/: orchestrator.py  prompts.py
src/ai_agent/utils/: logger.py
src/cli/: cli.py
systemd/: aide-agent.service
